--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -39,6 +39,7 @@ http {
 
     server {
         listen 80;
+        listen [::]:80;  # IPv6 support for healthcheck
         server_name localhost;
         root /usr/share/nginx/html;
         index index.html;
@@ -75,11 +76,11 @@ http {
             proxy_set_header X-Forwarded-Proto $scheme;
         }
 
-        # Health check endpoint
+        # Health check endpoint - proxy to backend for consistent health status
         location /health {
+            proxy_pass http://backend:8000/health;
+            proxy_set_header Host $host;
             access_log off;
-            return 200 "healthy\n";
-            add_header Content-Type text/plain;
         }
     }
 }
