--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,16 +1,20 @@
 # Multi-stage build for BI Agent Backend with MCP Servers
+# Stage 0: UV Image Source (Configurable for robustness)
+ARG UV_VERSION=0.9.17
+ARG UV_REGISTRY=ghcr.io
+FROM ${UV_REGISTRY}/astral-sh/uv:${UV_VERSION} AS uv_source
+
 # Stage 1: Builder - Install dependencies using uv
 # Using Docker Hub (more accessible in corporate networks than ghcr.io)
 FROM python:3.12-slim-bookworm AS builder
 
 # Install curl (required for uv installer) and uv
-RUN apt-get update && apt-get install -y --no-install-recommends curl ca-certificates \
+RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates \
     && rm -rf /var/lib/apt/lists/*
 
-# Install uv using official standalone installer (production-proven)
-ADD https://astral.sh/uv/install.sh /uv-installer.sh
-RUN sh /uv-installer.sh && rm /uv-installer.sh
-ENV PATH="/root/.local/bin:${PATH}"
+# Install uv using configured source
+COPY --from=uv_source /uv /uvx /bin/
+
 
 # Set environment variables for uv with retry settings for unreliable networks
 ENV UV_COMPILE_BYTECODE=1 \
