--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "langchain==0.3.16",
     "langchain-aws==0.2.13",
     "langchain-google-genai==2.0.8",
+    "langchain-openai>=0.2.0",
     "langchain-core>=0.3.32,<0.4.0",
     "langgraph-checkpoint>=2.0.15",
     "langgraph-checkpoint-sqlite==2.0.6",
