feat: Harden multi-db support and enhanced UI components

--- a/.env.example
+++ b/.env.example
@@ -1,41 +1,55 @@
 # Docker Version Control (for rollback strategy)
 VERSION=1.0.0-alpha
 
-# AWS Bedrock Configuration
-# IMPORTANT: Replace with your actual AWS credentials
-# TODO: Migrate to AWS IAM roles and Secrets Manager for production
-AWS_ACCESS_KEY_ID=your_aws_access_key_here
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
-AWS_REGION=us-east-1
+# AI Configuration (Mistral default)
+# Primary LLM Logic - get your key from https://console.mistral.ai/
+QUERY_LLM_PROVIDER=mistral
+QUERY_LLM_MODEL=devstral-small-latest
+MISTRAL_API_KEY=your_mistral_api_key_here
 
-# Oracle Database Configuration
-# TODO: Move to AWS Secrets Manager for production
+# Google Gemini (Optional fallback)
+GOOGLE_API_KEY=your_google_api_key_here
+
+# Oracle Database Configuration (Docker - 23ai Free)
 ORACLE_HOST=localhost
-ORACLE_PORT=1521
-ORACLE_SERVICE_NAME=XEPDB1
-ORACLE_USERNAME=your_oracle_username
-ORACLE_PASSWORD=your_oracle_password
+ORACLE_PORT=1522
+ORACLE_SERVICE_NAME=FREEPDB1
+ORACLE_USERNAME=system
+ORACLE_PASSWORD=password
+
+# Redis Server
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=redispass123
+
+# FalkorDB (via mapped port 6380)
+FALKORDB_HOST=localhost
+FALKORDB_PORT=6380
+FALKORDB_DATABASE=amil_knowledge_graph
+
+# Apache Doris
+DORIS_DB_HOST=localhost
+DORIS_DB_PORT=9030
+DORIS_DB_USER=root
+DORIS_DB_PASSWORD=
+DORIS_DB_DATABASE=demo
+
+# PostgreSQL (Optional)
+POSTGRES_ENABLED=false
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=postgres
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=postgres
 
 # Application Security
 # IMPORTANT: Generate a new JWT secret key for each environment
 # Use: python -c "import secrets; print(secrets.token_urlsafe(32))"
 JWT_SECRET_KEY=your_jwt_secret_key_here
 
-# MCP Server Configuration
-MCP_SERVER_HOST=localhost
-MCP_SERVER_PORT=3001
-
-# Application Configuration
+# Infrastructure & Monitoring
 ENVIRONMENT=development
 LOG_LEVEL=INFO
-
-# Backend Server Configuration
-BACKEND_HOST=localhost
 BACKEND_PORT=8000
-
-# Frontend Configuration
-FRONTEND_HOST=localhost
 FRONTEND_PORT=3000
-
-# Grafana Configuration
 GRAFANA_PORT=3002
