--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,49 +1,33 @@
 # LLM Provider Configuration
-# Choose between 'gemini' (development) or 'bedrock' (production)
-# Default: gemini for local development
-LLM_PROVIDER=gemini
-
-# Google Gemini Configuration (Development/Testing)
-# Get your API key from: https://makersuite.google.com/app/apikey
-GOOGLE_API_KEY=your_google_api_key_here
-
-# AWS Bedrock Configuration (Production)
-# IMPORTANT: Replace with your actual AWS credentials
-AWS_ACCESS_KEY_ID=your_aws_access_key_here
-AWS_SECRET_ACCESS_KEY=your_aws_secret_key_here
-AWS_REGION=us-east-1
+# Choose between 'mistral' (default), 'gemini', 'bedrock', 'qwen', or 'openrouter'
+QUERY_LLM_PROVIDER=mistral
+QUERY_LLM_MODEL=devstral-small-latest
 
 # Mistral AI Configuration
 # Get your API key from: https://console.mistral.ai/
 MISTRAL_API_KEY=your_mistral_api_key_here
-MISTRAL_MODEL=mistral-large-latest
-# For Devstral 2 (specific promotion model) use:
-# MISTRAL_MODEL=devstral-2512
+MISTRAL_MODEL=devstral-small-latest
+
+# Graphiti (Knowledge Graph) AI Setup
+GRAPHITI_LLM_PROVIDER=mistral
+GRAPHITI_LLM_MODEL=devstral-small-latest
+GRAPHITI_EMBEDDING_PROVIDER=local
+GRAPHITI_EMBEDDING_MODEL=all-MiniLM-L6-v2
+GRAPHITI_EMBEDDING_DIMENSIONS=384
+
+# Google Gemini (Optional)
+GOOGLE_API_KEY=your_google_api_key_here
 
 # Oracle Database Configuration
-# TODO: Move to AWS Secrets Manager for production
 ORACLE_HOST=localhost
-ORACLE_PORT=1521
-ORACLE_SERVICE_NAME=XEPDB1
-ORACLE_USERNAME=your_oracle_username
-ORACLE_PASSWORD=your_oracle_password
+ORACLE_PORT=1522
+ORACLE_SERVICE_NAME=FREEPDB1
+ORACLE_USERNAME=system
+ORACLE_PASSWORD=password
+ORACLE_DEFAULT_CONNECTION=TestUserCSV
 
-# Application Security
-# IMPORTANT: Generate a new JWT secret key for each environment
-# Use: python -c "import secrets; print(secrets.token_urlsafe(32))"
-JWT_SECRET_KEY=your_jwt_secret_key_here
-
-# MCP Server Configuration
-MCP_SERVER_HOST=localhost
-MCP_SERVER_PORT=3001
-
-# Doris MCP Configuration
-DORIS_MCP_ENABLED=false
-DORIS_MCP_HOST=127.0.0.1
-DORIS_MCP_PORT=8081
-# Local path to Doris MCP Server (overrides git clone if set)
-# Example: ./services/doris-mcp-server or /.doris-mcp-server
-DORIS_MCP_SERVER_PATH=
+# Apache Doris Configuration
+DORIS_MCP_ENABLED=true
 DORIS_DB_HOST=localhost
 DORIS_DB_PORT=9030
 DORIS_DB_USER=root
@@ -56,48 +40,30 @@ POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
 POSTGRES_DATABASE=postgres
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=your_postgres_password
-POSTGRES_POOL_MIN_SIZE=2
-POSTGRES_POOL_MAX_SIZE=10
-POSTGRES_POOL_TIMEOUT=30
-POSTGRES_QUERY_TIMEOUT=600
+POSTGRES_PASSWORD=postgres
 POSTGRES_READ_ONLY=true
 
 # Redis Configuration
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=your_redis_password
-REDIS_URL=redis://:your_redis_password@localhost:6379/0
-REDIS_SESSION_DB=0
-REDIS_CACHE_DB=1
-REDIS_CELERY_DB=2
+REDIS_PASSWORD=redispass123
 
-# Celery Task Queue
-CELERY_BROKER_URL=redis://:your_redis_password@localhost:6379/0
-CELERY_RESULT_BACKEND=redis://:your_redis_password@localhost:6379/1
+# FalkorDB Configuration
+FALKORDB_HOST=localhost
+FALKORDB_PORT=6380
+FALKORDB_DATABASE=amil_knowledge_graph
 
-# Flower Monitoring
-FLOWER_USER=admin
-FLOWER_PASSWORD=admin
+# Celery & Infrastructure
+CELERY_BROKER_URL=redis://:redispass123@localhost:6379/0
+CELERY_RESULT_BACKEND=redis://:redispass123@localhost:6379/1
 
-# Apache Superset Configuration
-SUPERSET_SECRET_KEY=your_superset_secret_key
-SUPERSET_DB_PASSWORD=your_superset_db_password
+# Application Security
+# IMPORTANT: Generate a new random string (32 chars)
+JWT_SECRET_KEY=your_jwt_secret_key_here
+JWT_REFRESH_SECRET_KEY=your_jwt_refresh_secret_key_here
 
-# Application Configuration
+# Monitoring & Observability
 ENVIRONMENT=development
 LOG_LEVEL=INFO
-
-# LangGraph Configuration
-LANGGRAPH_CHECKPOINT_DB=/app/data/checkpoints.db
-LANGGRAPH_API_KEY=your_langgraph_api_key_here
-
-# Qlik Sense Configuration (On-Premises)
-QLIK_BASE_URL=https://qlik-server:4242
-QLIK_AUTH_USER=UserDirectory=INTERNAL;UserId=sa_repository
-QLIK_XRFKEY=
-
-# Apache Superset Configuration (On-Premises)
-SUPERSET_BASE_URL=http://superset:8088
-SUPERSET_USERNAME=admin
-SUPERSET_PASSWORD=admin
+OTEL_EXPORTER_OTLP_ENDPOINT=http://localhost:4318
+LANGFUSE_ENABLED=false
