--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -10,7 +10,7 @@ authors = [
     {name = "BI Agent Team"}
 ]
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
     # Core API Framework (PINNED for security)
     "fastapi==0.115.6",
@@ -21,6 +21,7 @@ dependencies = [
     "pydantic-settings==2.7.1",
     # MCP Client Integration
     "mcp==1.14.0",
+    "doris-mcp-server>=0.6.0",
     # LangGraph & AI Framework (updated after CopilotKit removal)
     "langgraph>=0.6.10",
     "langgraph-prebuilt>=0.6.4",
@@ -34,13 +35,14 @@ dependencies = [
     "langgraph-checkpoint-sqlite==2.0.6",
     # Authentication & Security
     "python-jose[cryptography]==3.3.0",
-    "passlib[bcrypt]==1.7.4",
-    "bcrypt==4.0.1",
+    "bcrypt>=4.1.0",
     # Database & Session Management
     "sqlalchemy==2.0.23",
     "alembic==1.13.1",
     # PostgreSQL Driver (psycopg3)
     "psycopg[binary,pool]>=3.2.0",
+    # Oracle Driver
+    "oracledb>=2.2.0",
     # Redis Cache & Session Storage (PINNED)
     "redis==5.2.1",
     "redis-om==0.3.3",
@@ -81,27 +83,28 @@ dependencies = [
     # SQL parsing (required by orchestrator)
     "sqlparse>=0.4.4",
     "uuid-utils>=0.14.0",
+    "sentence-transformers>=3.3.0",
 ]
 
 [project.optional-dependencies]
 dev = [
-    "pytest==7.4.3",
-    "pytest-asyncio==0.21.1",
-    "pytest-cov==4.1.0",
-    "black==23.11.0",
-    "isort==5.12.0",
-    "mypy>=1.8.0",
+    "pytest>=8.4.0",
+    "pytest-asyncio>=0.24.0",
+    "pytest-cov>=5.0.0",
+    "black>=24.0.0",
+    "isort>=5.13.0",
+    "mypy>=1.11.0",
     "ruff>=0.1.9",
 ]
 
 [dependency-groups]
 dev = [
-    "pytest==7.4.3",
-    "pytest-asyncio==0.21.1",
-    "pytest-cov==4.1.0",
-    "black==23.11.0",
-    "isort==5.12.0",
-    "mypy>=1.8.0",
+    "pytest>=8.4.0",
+    "pytest-asyncio>=0.24.0",
+    "pytest-cov>=5.0.0",
+    "black>=24.0.0",
+    "isort>=5.13.0",
+    "mypy>=1.11.0",
     "ruff>=0.1.9",
 ]
 
