--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,11 +18,11 @@ services:
       - AWS_ACCESS_KEY_ID=${AWS_ACCESS_KEY_ID}
       - AWS_SECRET_ACCESS_KEY=${AWS_SECRET_ACCESS_KEY}
       - AWS_REGION=${AWS_REGION}
-      - ORACLE_HOST=host.docker.internal
-      - ORACLE_PORT=${ORACLE_PORT:-1521}
-      - ORACLE_SERVICE_NAME=${ORACLE_SERVICE_NAME:-XEPDB1}
-      - ORACLE_USERNAME=${ORACLE_USERNAME}
-      - ORACLE_PASSWORD=${ORACLE_PASSWORD}
+      - ORACLE_HOST=oracle
+      - ORACLE_PORT=1521
+      - ORACLE_SERVICE_NAME=${ORACLE_SERVICE_NAME:-FREEPDB1}
+      - ORACLE_USERNAME=${ORACLE_USERNAME:-system}
+      - ORACLE_PASSWORD=${ORACLE_PASSWORD:-password}
       - ORACLE_DEFAULT_CONNECTION=${ORACLE_DEFAULT_CONNECTION:-TestUserCSV}
       - JWT_SECRET_KEY=${JWT_SECRET_KEY}
       - JWT_REFRESH_SECRET_KEY=${JWT_REFRESH_SECRET_KEY}
@@ -40,7 +40,7 @@ services:
       - DORIS_DB_PORT=${DORIS_DB_PORT:-9030}
       - DORIS_DB_USER=${DORIS_DB_USER:-root}
       - DORIS_DB_PASSWORD=${DORIS_DB_PASSWORD:-}
-      - DORIS_DB_DATABASE=${DORIS_DB_DATABASE:-information_schema}
+      - DORIS_DB_DATABASE=${DORIS_DB_DATABASE:-demo}
       - POSTGRES_ENABLED=${POSTGRES_ENABLED:-false}
       - POSTGRES_HOST=${POSTGRES_HOST:-postgres}
       - POSTGRES_PORT=${POSTGRES_PORT:-5432}
@@ -76,6 +76,8 @@ services:
       redis:
         condition: service_healthy
       doris:
+        condition: service_healthy
+      oracle:
         condition: service_healthy
     networks:
       - bi-agent-network
@@ -235,6 +237,26 @@ services:
       retries: 10
       start_period: 120s
 
+  # Oracle Database 23ai Free
+  oracle:
+    image: container-registry.oracle.com/database/free:23.4.0.0
+    container_name: bi-agent-oracle
+    ports:
+      - "1522:1521"
+    environment:
+      - ORACLE_PASSWORD=${ORACLE_PASSWORD:-password}
+    volumes:
+      - oracle_data:/opt/oracle/oradata
+    networks:
+      - bi-agent-network
+    restart: unless-stopped
+    healthcheck:
+      test: ["CMD-SHELL", "ls /opt/oracle/oradata/FREEPDB1 || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 20
+      start_period: 60s
+
   # PostgreSQL
   postgres:
     image: postgres:16-alpine
@@ -342,3 +364,5 @@ volumes:
     name: bi-agent-backend-data
   postgres_data:
     name: bi-agent-postgres-data
+  oracle_data:
+    name: bi-agent-oracle-data
